k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osss-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: osss.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8081
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8085
